...
                        LclTab(
                            tab == Tab.Workspace && screen == Screen.Workspace,
                            {
                                if (tab != Tab.Manual) screen = Screen.Workspace
                                tab = Tab.Workspace
                            },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_workspace"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("▤", "Workspace")
                        }
                        LclTab(
                            tab == Tab.Manual,
                            { tab = Tab.Manual },
                            Modifier.weight(1f).fillMaxHeight().testTag("tab_manual"),
                            barOnTop = true,
                        ) {
                            NavigationLabel("?", "Manual")
                        }
                        LclTab(
                            tab == Tab.Workspace && screen == Screen.Settings,
...
